# EasyAmp

./: .gitignore  ARCHITECTURE.md  AUTHORS  INSTALL.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  pyproject.toml  run.sh
.github/workflows/: flatpak.yml  macos.yml  windows.yml
data/: codes.vonholten.EasyAmp.desktop  codes.vonholten.EasyAmp.metainfo.xml  com.vonholtencodes.EasyAmp.desktop  com.vonholtencodes.EasyAmp.metainfo.xml  easyamp.desktop
docs/: macos-testing-guide.md
easyamp/: __init__.py  app.py  backend.py  eqbank.py  eqio.py  eqmodel.py  eqpanel.py  eqpresets.py  eqview.py  eqwidget.py  eqwindow.py  fontload.py  paint.py  player.py  playlistpanel.py  presetui.py  spectrum.py  style.css  update_check.py  viz.py  widgets.py  window.py
easyamp/fonts/: DSEG-OFL.txt
packaging/: codes.vonholten.EasyAmp.yaml  com.vonholtencodes.EasyAmp.yaml
packaging/.flatpak-builder/cache/refs/heads/x86_64-codes.vonholten.EasyAmp.yaml/: build-easyamp  build-python3-numpy  cleanup  finish  init
packaging/.flatpak-builder/checksums/: x86_64-codes.vonholten.EasyAmp.yaml
packaging/flathub/: com.vonholtencodes.EasyAmp.yaml
packaging/macos/: EasyAmp.spec  easyamp_launch.py
packaging/windows/: EasyAmp.iss  EasyAmp.spec  easyamp_launch.py
